# Middleware

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Dgps/: CMakeLists.txt
src/Dgps/src/: dgps_hmw_node.cpp  main.cpp  ntrip.h  ntripclient.cpp  serial.cpp  serial.h
src/Dgps/test/: test.cpp
src/Dgps/yaml/: dgps.yaml
src/Gazebo/: CMakeLists.txt
src/Gazebo/plugin/: d_drive_car_plugin.cpp  gui_mouse_click_goal.cpp  gui_mouse_click_path_plan_plugin.cpp  odom_publisher_plugin.cpp  pose_publisher_plugin.cpp
src/Gazebo/src/: d_drive_car_control.cpp
src/Gazebo/test/: map_publisher_test.cpp  publisher.cpp  subscriber.cpp
src/Gazebo/world/: first.world
src/Gazebo/world/model/HnuRobot/: HnuRobot.sdf  model.config
src/Gazebo/world/model/HnuRobot/xacro/: base.urdf.xacro  caster.urdf.xacro  fishbot.urdf  fishbot.urdf.xacro  wheel.urdf.xacro
src/LocalPlanner/: CMakeLists.txt
src/LocalPlanner/include/base/: ApeLine.hpp  BaseDwaPlanner.hpp  BaseGeneratePath.hpp  BaseScore.hpp  MotionState.hpp
src/LocalPlanner/include/car/: CarDwaPlanner.hpp
src/LocalPlanner/src/: test.cpp
src/LocalPlanner/src/base/: BaseDwaPlanner.cpp  BaseGeneratePath.cpp  BaseScore.cpp
src/LocalPlanner/src/car/: CarDwaNode.cpp  CarDwaPlanner.cpp
src/LocalPlanner/test/: GetPath.cpp  LineTest.cpp  MotionStateTest.cpp
src/LocalPlanner/yaml/: BaseParam.yaml  CarParam.yaml
src/Master/: CMakeLists.txt
src/Master/config/: config.yaml  masterconfig.json  masteruwbconfig.json
src/Master/src/: Acceptor.cpp  Acceptor.hpp  Define.hpp  InterfaceManager.cpp  InterfaceManager.hpp  MiddlewareManager.cpp  MiddlewareManager.hpp  Node.cpp  Node.hpp  ProcessManager.cpp  ProcessManager.hpp  Publish.cpp  Publish.hpp  Server.cpp  Server.hpp  Subscribe.cpp  Subscribe.hpp  main.cpp
src/Master/src/core/: Acceptor.cpp  Acceptor.hpp  MiddlewareManager.cpp  MiddlewareManager.hpp  Node.cpp  Publish.cpp  Publish.hpp  Server.cpp  Subscribe.cpp  Subscribe.hpp  UdsRouter.cpp  UdsRouter.hpp
src/Master/src/interface/: Host.cpp  Host.hpp  HostInterface.cpp  HostInterface.hpp  Interface.cpp  Interface.hpp  InterfaceRouter.cpp  InterfaceRouter.hpp  Map.cpp  Map.hpp
src/Master/src/interface/controller/: NewController.cpp  NodeController.cpp  NodePubController.cpp  NodeSubController.cpp  PublishController.cpp  WeightController.cpp
src/Master/src/shm/: Acceptor.cpp  Acceptor.hpp  Node.cpp  Node.hpp  Publish.cpp  Publish.hpp  Server.cpp  Server.hpp  Subscribe.cpp  Subscribe.hpp  UdsRouter.cpp  UdsRouter.hpp
src/Master/src/shm/controller/: NodeController.cpp  NodePubController.cpp  NodeSubController.cpp  TopicController.cpp  TopicInfoController.cpp
src/Master/src/shm/interface/: ControllerInterface.hpp  GetController.hpp
src/Master/src/tcp/: Acceptor.cpp  Acceptor.hpp  Server.cpp  Server.hpp  TcpHost.cpp  TcpHost.hpp  TcpHostInterface.cpp  TcpHostInterface.hpp  TcpInterface.cpp  TcpInterface.hpp
src/Master/src/uwb/: UwbFramecodec.cpp  UwbFramecodec.hpp  UwbHandle.cpp  UwbHandle.hpp  UwbHostInterface.cpp  UwbHostInterface.hpp  UwbInterface.cpp  UwbInterface.hpp  UwbTimeslotmanager.cpp  UwbTimeslotmanager.hpp
src/Msgs/: CMakeLists.txt
src/Msgs/cmake/: Middleware-MsgsConfig.cmake.in
src/Msgs/proto/BuiltinInterfaces/: Time.proto
src/Msgs/proto/Dgps/: Gnvtg.proto  Gpfpd.proto  Gtimu.proto  NavSatFix.proto  NavSatStatus.proto
src/Msgs/proto/Geometry/: Point.proto  PointStamped.proto  Pose.proto  PoseArray.proto  PoseStamped.proto  PoseWithCovariance.proto  Quaternion.proto  Twist.proto  TwistWithCovariance.proto  Vector3.proto
src/Msgs/proto/Nav/: MapMetaData.proto  OccupancyGrid.proto  Odometry.proto
src/Msgs/proto/Sensor/: Image.proto
src/Msgs/proto/Std/: Bool.proto  Float64.proto  Header.proto  String.proto  dgps.proto
src/Msgs/proto/TaskPlanner/: GlobalPathPlan.proto  GlobalPathPlanFeedback.proto
src/Node/: CMakeLists.txt
src/Node/cmake/: Middleware-NodeConfig.cmake.in
src/Node/include/: Node.hpp  Publish.decl.hpp  Publish.hpp  PublishInterface.hpp  Publisher.decl.hpp  Publisher.hpp  PublisherInterface.hpp  Subscribe.decl.hpp  Subscribe.hpp  SubscribeInterface.hpp  Subscriber.decl.hpp  Subscriber.hpp  SubscriberInterface.hpp
src/Node/include/hmw/: Define.hpp  Node.hpp  NodeImpl.hpp  Publisher.decl.hpp  Publisher.hpp  Subscriber.decl.hpp  Subscriber.hpp  Timer.hpp
src/Node/proto/: example.proto
src/Node/src/: Node.cpp  NodeImpl.cpp  Timer.cpp  main.cpp
src/Node/test/: main.cpp  pub.cpp  sub.cpp
src/Node/test/proto/: example.pb.cc  example.pb.h
src/Record/test/: 2025-05-19-17-10-24.txt  2025-05-20-15-29-07.txt  2025-05-20-15-36-38.txt
src/Test/: CMakeLists.txt
src/Test/src/: pub.cpp  sub.cpp  topicecho.cpp  topicpub.cpp
src/Util/: CMakeLists.txt
src/Util/src/: main.cpp
src/task_and_path_planner/: CMakeLists.txt
src/task_and_path_planner/include/: PathCalculator.hpp
src/task_and_path_planner/pddl/: robot_navigation.pddl
src/task_and_path_planner/src/: PathCalculator.cpp  main.cpp
src/task_and_path_planner/test/: PathCalculatorTest.cpp  StandaloneTest.cpp
